feat: add /transactions/me route
