# src/routes/users.js
@@ -12,7 +12,7 @@ import { auth } from '../middlewares/auth.js';
 
 export const usersRouter = Router();
 
-usersRouter.get('/', auth, async (request, response) => {
+usersRouter.get('/me', auth, async (request, response) => {
     const getUserByIdController = makeGetUserByIdController();
 
     console.log('Usuário Autenticado:', request.userId);
@@ -35,7 +35,7 @@ usersRouter.post('/', async (request, response) => {
     response.status(statusCode).send(body);
 });
 
-usersRouter.patch('/', auth, async (request, response) => {
+usersRouter.patch('/me', auth, async (request, response) => {
     const updateUserController = makeUpdateUserController();
 
     const { statusCode, body } = await updateUserController.execute({
@@ -48,7 +48,7 @@ usersRouter.patch('/', auth, async (request, response) => {
     response.status(statusCode).send(body);
 });
 
-usersRouter.delete('/', auth, async (request, response) => {
+usersRouter.delete('/me', auth, async (request, response) => {
     const deleteUserController = makeDeleteUserController();
 
     const { statusCode, body } = await deleteUserController.execute({
@@ -61,7 +61,7 @@ usersRouter.delete('/', auth, async (request, response) => {
     response.status(statusCode).send(body);
 });
 
-usersRouter.get('/balance', auth, async (request, response) => {
+usersRouter.get('/me/balance', auth, async (request, response) => {
     const getUserBalanceController = makeGetUserBalanceController();
     const { statusCode, body } = await getUserBalanceController.execute({
         ...request,
